# snippet

./: ARCHITECTURE.md  CLAUDE.md  DESIGN.md  HANDOFF.md  LICENSE  PROGRESS.md  README.md  README.zh-CN.md  SPEC.md  TASKS.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: test.yml
samples/: template-example.json  template-simple.json
src/: App.tsx  BodyWithVariableChips.tsx  ColorManagement.tsx  ConfirmDialog.tsx  HotkeyInput.tsx  Onboarding.tsx  OptionsInput.tsx  Palette.tsx  Settings.tsx  TagInput.tsx  TagPill.tsx  TemplateEditor.tsx  TemplateFillDialog.tsx  TemplateList.tsx  Toast.tsx  VariableEditor.tsx  VariableList.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auto_paste.rs  color.rs  commands.rs  fill.rs  hotkey.rs  lib.rs  main.rs  onboarding.rs  palette.rs  paths.rs  render.rs  schema.rs  search.rs  state.rs  storage.rs
src-tauri/src/lib/bindings/: AppInfo.ts  ApplyOutcome.ts  Bootstrap.ts  DataFolderStatus.ts  FillDialogState.ts  LastUsed.ts  Settings.ts  StartupWarning.ts  Template.ts  ThemePreference.ts  Variable.ts  VariableColorMap.ts
src/lib/: body.ts  colors.tsx  fill.ts  motion.ts  render.ts  settings.tsx  theme.tsx
src/lib/bindings/: AppInfo.ts  ApplyOutcome.ts  Bootstrap.ts  DataFolderStatus.ts  FillDialogState.ts  Settings.ts  StartupWarning.ts  TagColorMap.ts  Template.ts  TemplateSummary.ts  Variable.ts  VariableType.ts
