[package]
name = "snippet"
version = "0.1.0"
description = "Snippet — desktop text template manager"
authors = ["pluiefox"]
edition = "2021"

[lib]
name = "snippet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "10", features = ["uuid-impl", "serde-compat"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
regex = "1"
nucleo-matcher = "0.3"
pinyin = "0.10"
rand = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
enigo = "0.3"
